Fixed navbar display bug on mobile

--- a/web/templates/css/site.css
+++ b/web/templates/css/site.css
@@ -79,6 +79,7 @@ header a {
   header ul {
     display: none;
     float: initial;
+    box-sizing: border-box;
   }
 
   header li {
